--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-structopt = "0.3.26"
 once_cell = "1.10.0"
+structopt = "0.3.26"
+crossbeam = "0.8.1"
+debugless-unwrap = "0.0.4"
